Cleaned the code a bit.

--- a/views/room.jade
+++ b/views/room.jade
@@ -9,5 +9,5 @@ block content
         });
 
         socket.on('update', function(data) {
-            alert(data.message);
+            console.log(data.message);
         });
